--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,350 @@
-#favicon{
-    border-radius: 50%;
-  border: 5 px solid red;
+/* section nav_bar */
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  height: 60px;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: 10px 2px 7px rgb(230, 218, 227);
+  font-size: 20px;
+  transition: 1s;
+  z-index: 100;
 }
+
+/* my log start here */
+nav>div:first-child {
+  margin: 0px auto;
+  height: 50px;
+  font-size: 30px;
+  font-weight: 600;
+  border-top: 2px solid white;
+  border-left: 5px solid white;
+  border-radius: 20px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  margin-left: 40px;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+}
+
+.l-1 {
+  font-weight: 700;
+  color: white;
+}
+
+.l-2 {
+  font-weight: 700;
+  color: yellow;
+}
+
+.l-3 {
+  font-weight: 700;
+  color: rgb(255, 0, 195);
+}
+
+.l-4 {
+  font-weight: 700;
+  color: rgb(0, 255, 0);
+}
+
+.l-5 {
+  font-weight: 700;
+  color: orangered;
+}
+
+/* my logo end here*/
+
+/* nav_items start here */
+nav>div>a {
+  text-decoration: none;
+  color: #ffffff;
+  margin: 0px 30px;
+}
+
+nav>div>a:hover {
+  color: #fb0094;
+}
+
+nav>div>a {
+  display: inline-block;
+  position: relative;
+}
+
+nav>div>a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+  background: linear-gradient(45deg,
+      #fb0094,
+      #fcfcff,
+      #2f18df,
+      #ff0000);
+}
+
+nav>div>a:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+/* nav_items end here */
+
+/* Dark mode start here */
+
+nav>button:last-child {
+  margin: 0px 50px;
+  background-color: black;
+  color: white;
+  font-size: 30px;
+  font-weight: 600;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+
+}
+
+/* Dark mode end here */
+
+/* section Home */
+.home-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-image: url(../assets/bgp.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: auto;
+  width: 100%;
+}
+
+.home-child-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 50%;
+}
+
+.my-name {
+  width: 100%;
+  margin-bottom: 30px;
+  text-align: center;
+  color: white;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #000000,
+    0 0 30px #000000, 0 0 40px #000000, 0 0 55px #000000, 0 0 75px #000000;
+}
+
+.short-description {
+  width: 70%;
+  text-align: center;
+  font-weight: bolder;
+  color: black;
+  font-size: 20px;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+}
+
+.hire-me,
+.download-resume {
+  background-color: DodgerBlue;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+  margin-inline: 10px;
+  margin-top: 50px;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+}
+
+.hire-me:hover,
+.download-resume:hover {
+  color: #120f12;
+  background-color: #62FA83;
+
+
+}
+
+.home-child-pic {
+  flex: 50%;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-pic {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  padding: 30px;
+  margin: auto;
+}
+
+/* section About */
+.about-container {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  background-color: black;
+  margin-top: 5px;
+  border-radius: 40px;
+
+}
+
+.about-child-pic {
+  display: flex;
+  flex: 50%;
+}
+
+.about-image {
+  width: 50%;
+  height: auto;
+  margin: auto;
+  padding: 25px;
+  transform: scaleX(-1);
+  border-radius: 10%;
+}
+
+.about-child-content {
+  flex: 50%;
+  width: 100%;
+}
+
+.about-me-title {
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  width: 80%;
+  margin: 30px auto;
+  font-size: 35px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+/* styling about-me-description start here */
+.about-me-description {
+  color: burlywood;
+  font-style: oblique;
+  font-size: 20px;
+  padding: 35px;
+  width: 80%;
+  margin: auto;
+}
+
+/* styling about-me-description end here */
+/* styling qoute start here */
+.jamie-blockquote {
+  font-family: Open Sans;
+  font-style: italic;
+  font-size: larger;
+  color: white;
+  padding: 1.2em 30px 1.2em 75px;
+  position: relative;
+  width: 80%;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.jamie-blockquote::before {
+  font-family: Arial;
+  content: "\201C";
+  color: #78c0a8;
+  font-size: 4em;
+  position: absolute;
+  left: 70px;
+  top: 25px;
+}
+
+.jamie-blockquote::after {
+  font-family: Arial;
+  content: "\201D";
+  color: #78c0a8;
+  font-size: 4em;
+  position: absolute;
+  right: 280px;
+  bottom: 25px;
+}
+
+.jamie-blockquote span {
+  display: block;
+  color: white;
+  font-style: oblique;
+  font-weight: bolder;
+  margin-top: 1em;
+  text-align: end;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+}
+
+/* styling qoute end here */
+
+/* section resume */
+#myResume {
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 50px;
+  border-top: 3px solid white;
+  margin: 0%;
+  padding: 20px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+  background-color: black;
+}
+
+/* section projects */
+#myProjects {
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 50px;
+  margin: 0%;
+  border-top: 3px solid white;
+  padding: 20px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+  background-color: black;
+}
+
+/* section contact */
+#myContact {
+  border-top: 3px solid white;
+  background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
+}
+
+/* section footer */
+#myFooter {
+  background-color: black;
+}
+
+/* Extra small devices: phones, 600px and down */
+@media only screen and (max-width: 600px) {}
+
+/* Small devices:  tablets and large phones, 600px and up */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices:  tablets, 768px and up */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices: laptops and desktops, 992px and up */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices large laptops and desktops, 1200px and up */
+@media only screen and (min-width: 1200px) {}
