--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 /* section nav_bar */
 nav {
   display: flex;
@@ -62,6 +66,12 @@ nav>div>a {
   text-decoration: none;
   color: #ffffff;
   margin: 0px 30px;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  font-size: 25px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
 }
 
 nav>div>a:hover {
@@ -124,6 +134,8 @@ nav>button:last-child {
   background-size: cover;
   height: auto;
   width: 100%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .home-child-content {
@@ -296,42 +308,113 @@ nav>button:last-child {
 /* styling qoute end here */
 
 /* section resume */
-#myResume {
-  text-align: center;
+.resume-container {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  background-color: black;
+  margin-top: 5px;
+  border-radius: 40px;
+  height: 370px;
+}
+
+.resume-left-style {
+  flex: 30%;
+  margin: 0px auto;
+  width: 100%;
   font-family: "Times New Roman", Times, serif;
-  font-size: 50px;
-  border-top: 3px solid white;
-  margin: 0%;
-  padding: 20px;
+  text-align: center;
+  font-size: 20px;
   color: whitesmoke;
   text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
-  background-color: black;
+}
+
+.resume-center-style {
+  flex: 30%;
+  margin: 0px auto;
+  width: 100%;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  font-size: 20px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+.resume-right-style {
+  flex: 30%;
+  margin: 0px auto;
+  width: 100%;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  font-size: 20px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
 }
 
 /* section projects */
-#myProjects {
-  text-align: center;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 50px;
-  margin: 0%;
-  border-top: 3px solid white;
-  padding: 20px;
-  color: whitesmoke;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+.projects-container {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  width: 100%;
   background-color: black;
+  margin-top: 5px;
+  border-radius: 40px;
+  height: 370px;
 }
 
 /* section contact */
-#myContact {
-  border-top: 3px solid white;
+.contact-container {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  width: 100%;
   background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
+  margin-top: 5px;
+  border-radius: 40px;
+  height: 370px;
 }
 
-/* section footer */
-#myFooter {
+.contact-left {
+  flex: 50%;
+  width: 100%;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: 10px 2px 7px rgb(230, 218, 227);
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 40px;
+  color: #ffffff;
+}
+
+.contact-right {
+  flex: 50%;
+  width: 100%;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: 10px 2px 7px rgb(230, 218, 227);
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 40px;
+  color: #ffffff;
+}
+
+/* section footer-name */
+.footer-container {
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  font-size: 20px;
+  color: #ffffff;
+  transform: translateY(2px);
   background-color: black;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+  margin: auto;
+  padding: 20px 0px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
 }
 
 /* Extra small devices: phones, 600px and down */
