--- a/css/style.css
+++ b/css/style.css
@@ -214,8 +214,8 @@ nav>button:last-child {
   height: auto;
   width: 100%;
   background-color: black;
-  margin-top: 5px;
-  border-radius: 40px;
+  margin: 5px 0px;
+
 
 }
 
@@ -271,6 +271,7 @@ nav>button:last-child {
   width: 80%;
   margin: auto;
   border-radius: 20px;
+
 }
 
 .jamie-blockquote::before {
@@ -308,50 +309,42 @@ nav>button:last-child {
 /* styling qoute end here */
 
 /* section resume */
+.resume-title {
+  background-color: black;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  font-size: 35px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
 .resume-container {
   display: flex;
-  justify-content: center;
-  height: auto;
-  width: 100%;
+  flex-direction: row;
+  text-align: center;
   background-color: black;
-  margin: 5px;
-  height: 400px;
+  margin-bottom: 5px;
+
 }
 
-.resume-left-style {
-  flex: 30%;
-  margin: 0px auto;
-  width: 100%;
+.resume-title-child {
   font-family: "Times New Roman", Times, serif;
+  text-shadow: 10px 2px 7px rgb(230, 218, 227);
   text-align: center;
-  font-size: 20px;
-  color: whitesmoke;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+  font-size: 30px;
+  color: #ffffff;
+  background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
+  margin: 5%;
+  flex: 50%;
+  border-radius: 5%;
 }
 
-.resume-center-style {
-  flex: 30%;
-  margin: 0px auto;
-  width: 100%;
-  font-family: "Times New Roman", Times, serif;
-  text-align: center;
-  font-size: 20px;
-  color: whitesmoke;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
-}
-
-.resume-right-style {
-  flex: 30%;
-  margin: 0px auto;
-  width: 100%;
-  font-family: "Times New Roman", Times, serif;
-  text-align: center;
-  font-size: 20px;
-  color: whitesmoke;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+.resume-images {
+  border-radius: 50%;
+  padding: 25px;
+  height: 200px;
+  width: 200px;
 }
 
 /* section projects */
@@ -393,8 +386,8 @@ nav>button:last-child {
   text-shadow: 10px 2px 7px rgb(230, 218, 227);
   text-align: center;
   font-size: 30px;
-  margin-bottom: 40px;
   color: #ffffff;
+  margin-bottom: 40px;
 }
 
 /* section footer-name */
@@ -412,6 +405,87 @@ nav>button:last-child {
   border-bottom-left-radius: 40px;
   border-bottom-right-radius: 40px;
 }
+
+
+.resume-logo {
+  display: flex;
+  flex-direction: row;
+  font-size: 10px;
+}
+
+/* project card source from app.js */
+.card {
+  background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
+}
+
+.card-img-top {
+  width: 300px;
+  height: 300px;
+  padding: 5px;
+}
+
+.card-title {
+  color: whitesmoke;
+  text-align: center;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+.card-description {
+  color: black;
+  font-weight: bold;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ff2d95 0px 0px 75px;
+}
+
+.card-language {
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+.card-status {
+  color: rgb(255, 38, 0);
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: large;
+}
+
+.card-github,
+.card-deployment {
+  background-color: black;
+  border-radius: 25px;
+  color: white;
+  padding: 7px 10px;
+  cursor: pointer;
+  font-size: 20px;
+  margin-inline: 10px;
+  margin-top: 50px;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+  text-decoration: none;
+  justify-content: center;
+
+}
+
+.card-github:hover,
+.card-deployment:hover {
+  background-color: green;
+  color: wheat;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+}
+
+
+
+
+
+
+
+
 
 /* Extra small devices: phones, 600px and down */
 @media only screen and (max-width: 600px) {}
