--- a/css/style.css
+++ b/css/style.css
@@ -379,16 +379,113 @@ nav>button:last-child {
   color: #ffffff;
 }
 
+.Contact-form-title,
+.Contact-info-title,
+.social-media-title {
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  width: 80%;
+  margin: 30px auto;
+  font-size: 35px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+label {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+input,
+textarea {
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+input[type="submit"] {
+  background-color: #04aa6d;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type="submit"]:hover {
+  background-color: blue;
+}
+
+/* contact info side  */
 .contact-right {
   flex: 50%;
   width: 100%;
-  font-family: "Times New Roman", Times, serif;
-  text-shadow: 10px 2px 7px rgb(230, 218, 227);
   text-align: center;
-  font-size: 30px;
-  color: #ffffff;
-  margin-bottom: 40px;
 }
+
+.contact-info {
+  box-sizing: border-box;
+  text-decoration: none;
+  transition: 0.5s;
+  color: white;
+  font-size: 30px;
+  text-shadow: 10px 2px 7px rgb(230, 218, 227);
+  margin-bottom: 40px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+/* social media staff */
+#facebook {
+  font-size: 40px;
+  border-radius: 50%;
+}
+
+#linkedin {
+  font-size: 40px;
+  border-radius: 50%;
+}
+
+#github {
+  font-size: 40px;
+  border-radius: 50%;
+
+}
+
+#messenger {
+  font-size: 40px;
+  border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* section footer-name */
 .footer-container {
@@ -416,6 +513,11 @@ nav>button:last-child {
 /* project card source from app.js */
 .card {
   background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
+}
+
+.card:hover {
+  -webkit-box-shadow: 0px 1px 15px 5px #FDFFF7;
+  box-shadow: 0px 1px 15px 5px #FDFFF7;
 }
 
 .card-img-top {
