--- a/css/style.css
+++ b/css/style.css
@@ -448,22 +448,25 @@ input[type="submit"]:hover {
 #facebook {
   font-size: 40px;
   border-radius: 50%;
+  margin-right: 20px;
 }
 
 #linkedin {
   font-size: 40px;
   border-radius: 50%;
+  margin-right: 20px;
 }
 
 #github {
   font-size: 40px;
   border-radius: 50%;
-
+  margin-right: 20px;
 }
 
 #messenger {
   font-size: 40px;
   border-radius: 50%;
+  margin-right: 20px;
 }
 
 
