--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,9 @@ nav>div>a:hover::before {
 nav>button:last-child {
   margin: 0px 50px;
   background-color: black;
+  justify-items: center;
+  border: none;
+  border-radius: 50%;
   color: white;
   font-size: 30px;
   font-weight: 600;
@@ -358,11 +361,82 @@ nav>button:last-child {
   background-color: #000000;
 }
 
+/* project card source from app.js */
+.card {
+  background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
+}
+
+.card:hover {
+  -webkit-box-shadow: 0px 1px 15px 5px #FDFFF7;
+  box-shadow: 0px 1px 15px 5px #FDFFF7;
+}
+
+.card-img-top {
+  width: 300px;
+  height: 300px;
+  padding: 5px;
+}
+
+.card-title {
+  color: whitesmoke;
+  text-align: center;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+.card-description {
+  color: black;
+  font-weight: bold;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ff2d95 0px 0px 75px;
+}
+
+.card-language {
+  color: whitesmoke;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+.card-status {
+  color: rgb(255, 38, 0);
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: large;
+}
+
+.card-github,
+.card-deployment {
+  background-color: black;
+  border-radius: 25px;
+  color: white;
+  padding: 7px 10px;
+  cursor: pointer;
+  font-size: 20px;
+  margin-inline: 10px;
+  margin-top: 50px;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+  text-decoration: none;
+  justify-content: center;
+
+}
+
+.card-github:hover,
+.card-deployment:hover {
+  background-color: green;
+  color: wheat;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
+}
+
+
 /* section contact */
 .contact-container {
   display: flex;
   justify-content: center;
-  height: auto;
   width: 100%;
   background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
   margin-top: 5px;
@@ -390,6 +464,10 @@ nav>button:last-child {
   color: whitesmoke;
   text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+}
+
+form {
+  margin: auto 15px;
 }
 
 label {
@@ -470,26 +548,6 @@ input[type="submit"]:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* section footer-name */
 .footer-container {
   font-family: "Times New Roman", Times, serif;
@@ -507,93 +565,111 @@ input[type="submit"]:hover {
 }
 
 
-.resume-logo {
+/* .resume-logo {
   display: flex;
   flex-direction: row;
   font-size: 10px;
-}
-
-/* project card source from app.js */
-.card {
-  background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
-}
-
-.card:hover {
-  -webkit-box-shadow: 0px 1px 15px 5px #FDFFF7;
-  box-shadow: 0px 1px 15px 5px #FDFFF7;
-}
-
-.card-img-top {
-  width: 300px;
-  height: 300px;
-  padding: 5px;
-}
-
-.card-title {
-  color: whitesmoke;
-  text-align: center;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
-}
-
-.card-description {
-  color: black;
-  font-weight: bold;
-  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
-    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
-    #ff2d95 0px 0px 50px, #ff2d95 0px 0px 75px;
-}
-
-.card-language {
-  color: whitesmoke;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
-}
-
-.card-status {
-  color: rgb(255, 38, 0);
-  font-weight: bold;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: large;
-}
-
-.card-github,
-.card-deployment {
-  background-color: black;
-  border-radius: 25px;
-  color: white;
-  padding: 7px 10px;
-  cursor: pointer;
-  font-size: 20px;
-  margin-inline: 10px;
-  margin-top: 50px;
-  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
-    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
-    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
-  text-decoration: none;
-  justify-content: center;
-
-}
-
-.card-github:hover,
-.card-deployment:hover {
-  background-color: green;
-  color: wheat;
-  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
-    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
-    #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
-}
-
-
-
-
-
-
-
+} */
 
 
 /* Extra small devices: phones, 600px and down */
-@media only screen and (max-width: 600px) {}
+@media only screen and (max-width: 600px) {
+
+  /* section nav_bar */
+  nav {
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    font-size: 10px;
+  }
+
+  /* my log start here */
+  nav>div:first-child {
+    margin: 10px auto;
+    height: fit-content;
+    font-size: 20px;
+    font-weight: 400;
+    padding-left: 10px;
+  }
+
+  /* Dark mode start here */
+  nav>button:last-child {
+    margin-top: 20px auto;
+  }
+
+  /* section Home */
+  .home-container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .hire-me,
+  .download-resume {
+    margin: 50px auto;
+  }
+
+  /* section About */
+  .about-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-image {
+    display: none;
+  }
+
+  /* styling qoute start here */
+  .jamie-blockquote::before {
+    left: 15px;
+    top: -10px;
+  }
+
+  .jamie-blockquote::after {
+    right: 20px;
+    bottom: 15px;
+  }
+
+  /* section resume */
+  .resume-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* section projects */
+  .projects-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* project card source from app.js */
+  .card {
+    margin: 20px;
+  }
+
+  .card-img-top {
+    width: 100%;
+  }
+
+  /* section contact */
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .Contact-form-title,
+  .Contact-info-title,
+  .social-media-title {
+    width: 100%;
+    font-size: 30px;
+  }
+
+  /* form {
+    margin: auto 15px;
+  } */
+
+}
+
 
 /* Small devices:  tablets and large phones, 600px and up */
 @media only screen and (min-width: 600px) {}
