--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,19 @@
 html {
-  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+
 }
 
 /* section nav_bar */
-nav {
+#nav-general-controler {
+  padding: 0%;
+}
+
+.container-fluid {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -15,10 +25,11 @@ nav {
   font-size: 20px;
   transition: 1s;
   z-index: 100;
+  border-bottom: 1px dotted white;
 }
 
-/* my log start here */
-nav>div:first-child {
+/* brand  */
+.brand {
   margin: 0px auto;
   height: 50px;
   font-size: 30px;
@@ -34,6 +45,11 @@ nav>div:first-child {
     #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
 }
 
+.brand-link {
+  text-decoration: none;
+}
+
+/* specifically design each word of brand */
 .l-1 {
   font-weight: 700;
   color: white;
@@ -59,10 +75,17 @@ nav>div:first-child {
   color: orangered;
 }
 
-/* my logo end here*/
+/* toggler icon */
+.navbar-toggler-icon {
+  background-color: white;
+}
 
 /* nav_items start here */
-nav>div>a {
+#navbarNavAltMarkup {
+  justify-content: end;
+}
+
+.nav_item>a {
   text-decoration: none;
   color: #ffffff;
   margin: 0px 30px;
@@ -72,18 +95,19 @@ nav>div>a {
   color: whitesmoke;
   text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
+
 }
 
-nav>div>a:hover {
+.nav_item>a:hover {
   color: #fb0094;
 }
 
-nav>div>a {
+.nav_item>a {
   display: inline-block;
   position: relative;
 }
 
-nav>div>a:before {
+.nav_item>a:before {
   content: "";
   position: absolute;
   width: 100%;
@@ -100,16 +124,14 @@ nav>div>a:before {
       #ff0000);
 }
 
-nav>div>a:hover::before {
+.nav_item>a:hover::before {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
 
-/* nav_items end here */
 
 /* Dark mode start here */
-
-nav>button:last-child {
+.dark-mood:last-child {
   margin: 0px 50px;
   background-color: black;
   justify-items: center;
@@ -124,7 +146,6 @@ nav>button:last-child {
 
 }
 
-/* Dark mode end here */
 
 /* section Home */
 .home-container {
@@ -135,12 +156,13 @@ nav>button:last-child {
   background-image: url(../assets/images/bgp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: auto;
   width: 100%;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  height: auto;
+  border-bottom: 1px dotted white;
+
 }
 
+/* left side of home page */
 .home-child-content {
   display: flex;
   flex-direction: column;
@@ -193,6 +215,7 @@ nav>button:last-child {
 
 }
 
+/* right side of home page */
 .home-child-pic {
   flex: 50%;
   text-align: center;
@@ -217,11 +240,10 @@ nav>button:last-child {
   height: auto;
   width: 100%;
   background-color: black;
-  margin: 5px 0px;
-
-
+  border-bottom: 1px dotted white;
 }
 
+/* left side  */
 .about-child-pic {
   display: flex;
   flex: 50%;
@@ -236,6 +258,7 @@ nav>button:last-child {
   border-radius: 10%;
 }
 
+/* right side  */
 .about-child-content {
   flex: 50%;
   width: 100%;
@@ -252,7 +275,7 @@ nav>button:last-child {
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
 }
 
-/* styling about-me-description start here */
+
 .about-me-description {
   color: burlywood;
   font-style: oblique;
@@ -262,8 +285,7 @@ nav>button:last-child {
   margin: auto;
 }
 
-/* styling about-me-description end here */
-/* styling qoute start here */
+/* styling qoute */
 .jamie-blockquote {
   font-family: Open Sans;
   font-style: italic;
@@ -309,10 +331,9 @@ nav>button:last-child {
     #ff2d95 0px 0px 50px, #ec1983 0px 0px 75px;
 }
 
-/* styling qoute end here */
 
 /* section resume */
-.resume-title {
+/* .resume-title {
   background-color: black;
   font-family: "Times New Roman", Times, serif;
   text-align: center;
@@ -320,14 +341,14 @@ nav>button:last-child {
   color: whitesmoke;
   text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
-}
+} */
 
 .resume-container {
   display: flex;
   flex-direction: row;
   text-align: center;
   background-color: black;
-  margin-bottom: 5px;
+  border-bottom: 1px dotted white;
 
 }
 
@@ -359,6 +380,7 @@ nav>button:last-child {
   width: 100%;
   padding: 60px;
   background-color: #000000;
+  border-bottom: 1px dotted white;
 }
 
 /* project card source from app.js */
@@ -439,18 +461,7 @@ nav>button:last-child {
   justify-content: center;
   width: 100%;
   background: linear-gradient(45deg, #77ce18 0%, #1c6ea4 44%, #c517b8 100%);
-  margin-top: 5px;
-}
-
-.contact-left {
-  flex: 50%;
-  width: 100%;
-  font-family: "Times New Roman", Times, serif;
-  text-shadow: 10px 2px 7px rgb(230, 218, 227);
-  text-align: center;
-  font-size: 30px;
-  margin-bottom: 40px;
-  color: #ffffff;
+  border-bottom: 1px dotted white;
 }
 
 .Contact-form-title,
@@ -466,9 +477,21 @@ nav>button:last-child {
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
 }
 
+.contact-left {
+  flex: 50%;
+  width: 100%;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: 10px 2px 7px rgb(230, 218, 227);
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 40px;
+  color: #ffffff;
+}
+
 form {
   margin: auto 15px;
 }
+
 
 label {
   float: left;
@@ -489,6 +512,7 @@ textarea {
   float: left;
   width: 75%;
   margin-top: 6px;
+  font-size: large;
 }
 
 input[type="submit"] {
@@ -516,37 +540,24 @@ input[type="submit"]:hover {
   text-decoration: none;
   transition: 0.5s;
   color: white;
-  font-size: 30px;
+  font-size: 20px;
   text-shadow: 10px 2px 7px rgb(230, 218, 227);
   margin-bottom: 40px;
   font-family: "Times New Roman", Times, serif;
 }
 
 /* social media staff */
-#facebook {
-  font-size: 40px;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-
-#linkedin {
-  font-size: 40px;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-
-#github {
-  font-size: 40px;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-
+#facebook,
+#linkedin,
+#github,
 #messenger {
   font-size: 40px;
+  color: black;
   border-radius: 50%;
   margin-right: 20px;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
 }
-
 
 /* section footer-name */
 .footer-container {
@@ -554,23 +565,13 @@ input[type="submit"]:hover {
   text-align: center;
   font-size: 20px;
   color: #ffffff;
-  transform: translateY(2px);
   background-color: black;
   text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
-  margin: auto;
-  padding: 20px 0px;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
+  padding: 15px 0px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
-
-
-/* .resume-logo {
-  display: flex;
-  flex-direction: row;
-  font-size: 10px;
-} */
-
 
 /* Extra small devices: phones, 600px and down */
 @media only screen and (max-width: 600px) {
