add some staff in readMe file and fix some css problems

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@ html {
   box-sizing: border-box;
 }
 
-*,
+/* *,
 *::before,
 *::after {
 
   box-sizing: inherit;
-}
+} */
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont,
@@ -18,10 +18,10 @@ body {
 /* section nav_bar */
 #nav-general-controler {
   padding: 0%;
-  top: 0;
+  /* top: 0;
   z-index: 100;
   position: fixed;
-  width: 100%;
+  width: 100%; */
 }
 
 .container-fluid {
@@ -578,15 +578,15 @@ input[type="submit"]:hover {
 }
 
 /*smallest devices (phones or maybe watches, 400px and down) display none for now */
-@media only screen and (max-width: 300px) {
-  * {
-    background-color: black;
- 
-  }
+@media only screen and (max-width: 400px) {
+  /* * {
+    background-color: red;
+    display: none;
+  } */
 }
 
 /* Extra small devices: phones, 600px and down */
-@media (min-width: 300px) and (max-width: 600px) {
+@media (min-width: 400px) and (max-width: 600px) {
 
   /* brand  */
   .brand {
@@ -909,4 +909,4 @@ input[type="submit"]:hover {
 
 
 /* Extra large devices large laptops and desktops, 1200px to up */
-@media only screen and (min-width: 1200px) {}
+/* @media only screen and (min-width: 1200px) {} */
