--- a/css/style.css
+++ b/css/style.css
@@ -690,8 +690,7 @@ input[type="submit"]:hover {
 }
 
 
-/* Small devices:  tablets and large phones, 600px and up */
-/* @media only screen and (min-width: 600px) */
+/* Small devices:  tablets and large phones, 600px to 768 */
 @media (min-width: 600px) and (max-width: 768px) {
 
   /* nav_items start here */
