--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,36 @@ html {
   box-sizing: inherit;
 } */
 
+
+/* for dark mood */
+#light-dark-button {
+  background-color: var(--light-dark-btn-bg);
+  background-image: var(--light-dark-btn-bg);
+}
+
+#light-dark-button::after {
+  background-color: #000000;
+  border: none;
+  color: var(--inverted-btn-text-color);
+  content: var(--light-dark-btn-content);
+}
+
 body {
+  --body-bg: black;
+  --header-bg: #007bbe;
+  --light-dark-btn-bg: #1d1e2b;
+  --light-dark-btn-content: "";
+  background-color: var(--body-bg);
   font-family: system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
+}
+
+body.dark {
+  --body-bg: brown;
+  --light-dark-btn-bg: rgb(11, 11, 11);
+  --light-dark-btn-content: "";
+  background-color: var(--body-bg);
 }
 
 /* section nav_bar */
@@ -29,7 +55,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-color: black;
+  background-color: var(--body-bg);
   font-family: "Times New Roman", Times, serif;
   text-shadow: 10px 2px 7px rgb(230, 218, 227);
   font-size: 20px;
@@ -246,7 +272,7 @@ body {
   justify-content: center;
   height: auto;
   width: 100%;
-  background-color: black;
+  background-color: var(--body-bg);
   border-bottom: 1px dotted white;
 }
 
@@ -286,7 +312,7 @@ body {
 .about-me-description {
   color: burlywood;
   font-style: oblique;
-  font-size: 20px;
+  font-size: 25px;
   padding: 35px;
   width: 100%;
   margin: auto;
@@ -303,7 +329,6 @@ body {
   width: 90%;
   margin: auto;
   border-radius: 20px;
-
 }
 
 .jamie-blockquote::before {
@@ -312,8 +337,8 @@ body {
   color: #78c0a8;
   font-size: 4em;
   position: absolute;
-  left: 70px;
-  top: 25px;
+  left: 40px;
+  top: -10px;
 }
 
 .jamie-blockquote::after {
@@ -354,7 +379,7 @@ body {
   display: flex;
   flex-direction: row;
   text-align: center;
-  background-color: black;
+  background-color: var(--body-bg);
   border-bottom: 1px dotted white;
 
 }
@@ -369,11 +394,15 @@ body {
   margin: 5%;
   flex: 50%;
   border-radius: 5%;
+  text-decoration: none;
 }
 
 .resume-title-child:hover {
   -webkit-box-shadow: 0px 1px 15px 5px #FDFFF7;
   box-shadow: 0px 1px 15px 5px #FDFFF7;
+  color: #ffffff;
+  font-weight: bolder;
+  text-decoration: none;
 }
 
 .resume-images {
@@ -391,7 +420,7 @@ body {
   height: auto;
   width: 100%;
   padding: 40px 5px;
-  background-color: #000000;
+  background-color: var(--body-bg);
   border-bottom: 1px dotted white;
 }
 
@@ -576,7 +605,7 @@ input[type="submit"]:hover {
   text-align: center;
   font-size: 20px;
   color: #ffffff;
-  background-color: black;
+  background-color: var();
   text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
     0 -18px 40px #f00, 2px 2px 2px rgba(206, 89, 55, 0);
   padding: 15px 0px;
@@ -585,11 +614,11 @@ input[type="submit"]:hover {
 }
 
 /*smallest devices (phones or maybe watches, 400px and down) display none for now */
-@media only screen and (max-width: 400px) {
+/* @media only screen and (max-width: 400px) {
   * {
     display: none;
   }
-}
+} */
 
 /* Extra small devices: phones, 600px and down */
 @media (min-width: 400px) and (max-width: 600px) {
