--- a/css/style.css
+++ b/css/style.css
@@ -614,11 +614,11 @@ input[type="submit"]:hover {
 }
 
 /*smallest devices (phones or maybe watches, 400px and down) display none for now */
-/* @media only screen and (max-width: 400px) {
+ @media only screen and (max-width: 400px) {
   * {
     display: none;
   }
-} */
+} 
 
 /* Extra small devices: phones, 600px and down */
 @media (min-width: 400px) and (max-width: 600px) {
